--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -77,5 +77,26 @@
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
 
+<!-- Adding Delete Botton -->
+<button 
+	type="button" 
+	class="btn btn-primary btn-lg" 
+	id="delete-btn" 
+	data-id="{{ venue.id }}">Delete</button>
+
+<script>
+	const deleteBtn = document.getElementById("delete-btn")
+	deleteBtn.onclick = function(e) {
+		const venue_id = e.target.dataset['id']
+		fetch('/venues/' + venue_id, {
+			method: 'DELETE'
+		}).then( response => {
+			if (response.redirected){
+				window.location.href = response.url;
+			}
+		});
+	}
+</script>
+
 {% endblock %}
 
